Fixed footer not stretching to entire width of page; cleaned up custom.css.scss a bit

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -49,14 +49,10 @@ textarea {
 }
 
 #content {
-  //font-family: 'Open Sans', sans-serif;
   overflow: auto;
   background-color: white;
   margin: auto;
-  //margin-top: 3em;
-  //position: relative;
   margin-bottom: 20px;
-  //padding-bottom: 80px; /* Needed to keep footer at bottom of page */
   height: 100%;
   min-height: 100%;
   box-sizing: border-box;
@@ -112,17 +108,11 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   padding-bottom: 10px;
-  /*
-  padding-bottom: 10px;
-  padding-right: 6px;
-  padding-left: 6px;
-  */
   font-weight: bold;
   font-family: $fancy-font;
   
   &:hover {
     text-decoration: none;
-    //background-color: #656565;
   }
 }
 
@@ -194,8 +184,6 @@ p {
   height: 110px;
   bottom: 0;
   width: 100%;
-  //margin-top: 0px;
-  //position: absolute;
   padding-top: 5px;
   border-top: 1px solid $gray-medium-light;
   color: $gray-light;
@@ -225,7 +213,6 @@ p {
 }
 
 #social-box {
-  //font-family: 'Open Sans', sans-serif;
   color: white;
   margin: auto;
   position: relative;
